# nvector

./: .codeclimate.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  THANKS.rst  THANKS.txt  appveyor.yml  build_package.py  conftest.py  pdm.lock314  pyproject.toml  requirements.readthedocs.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: ci-test.yml  python-package.yml  release.yml
docs/: Makefile  conf.py  index.rst  license.rst  requirements.txt
docs/api/: modules.rst  nvector.rst
docs/appendix/: acknowledgement.rst  index.rst  refs1.bib
docs/how-to/: contributing.rst  index.rst
docs/intro/: index.rst
docs/reference/: index.rst  nvector.rst  nvector.tests.rst  nvector_summary.rst
docs/src/: example_1.rst  example_10.rst  example_2.rst  example_3.rst  example_4.rst  example_5.rst  example_6.rst  example_7.rst  example_8.rst  example_9.rst  getting_started.rst  overview.rst
docs/topics/: index.rst  nvector.rst
docs/tutorials/: getting_started.rst  getting_started_functional.rst  index.rst  install.rst  whatsnext.rst
nvector/: __init__.py  _common.py  _core.py  _examples.py  _info.py  _info_functional.py  info.py  ngs.py  objects.py  plot.py  skeleton.py
nvector/tests/: test_frames.py  test_geodesic.py  test_nvector.py
src/nvector/: __init__.py  _acknowledgements.py  _common.py  _core.py  _documentation.py  _example_images.py  _examples.py  _examples_object_oriented.py  _images.py  _info.py  _info_functional.py  _installation.py  _intro.py  _license.py  _typing.py  core.py  karney.py  license.py  objects.py  plot.py  rotation.py  util.py
src/nvector/tests/: conftest.py  test_frames.py  test_geodesic.py  test_nvector.py  test_nvector_with_vectors.py  test_objects.py  test_plot.py  test_rotation.py  test_util.py
tests/: test_frames.py  test_geodesic.py  test_ngs.py  test_nvector.py
