[project]
name = "nvector"
dynamic = ["version"]
description = "The nvector library is a suite of tools written in Python to solve geographical position calculations forked from nvector."
authors = [
    {name = "Kenneth Gade, FFI"},
    {name = "Kristian Svartveit, FFI"},
    {name = "Brita Hafskjold Gade, FFI"},
    {name = "Matt Hogan", email = "mhogan@nwra.com"}
]
maintainers = [
  {name = "Per A. Brodtkorb, FFI"}
]
dependencies = [
    "numpy>=1.11.0",
    "scipy>=1.3.0",
    "karney>=1.0",
]

requires-python = ">=3.9"
readme = "README.rst"
license = {text = "Simplified BSD"}
license_file = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: GIS"
]

[project.optional-dependencies]
plot =["matplotlib>=3.8.0",
       "Cartopy>=0.22.0",]

[project.urls]
repository  = "https://github.com/pbrod/nvector/"
documentation = "https://nvector.readthedocs.io/en/latest/"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/nvector/__init__.py"

[tool.pdm.scripts]
build-docs-html = "sphinx-build -b html docs docs/_build/html -d docs/_build/doctrees"
build-docs-latex = "sphinx-build -b latex docs docs/_build/latex -d docs/_build/doctrees"
build-docs-pdf = "sphinx-build -b latexpdf docs docs/_build/latex -d docs/_build/doctrees"
lock_win64 = "pdm lock -L pdm_windows.lock --python 3.12 --strategy no_direct_minimal_versions --platform windows -dG all"
lock_linux = "pdm lock -L pdm_linux.lock --python 3.12 --strategy no_direct_minimal_versions --platform linux -dG all"

format = "ruff format ./src/"  # format code
check-style = "ruff check ./src/"  # check code style
check-types = "mypy ./src/"  # check types

show-next-version = "git-cliff --bumped-version"  # calculate and print the next semantic version to stdout:
show-next-changelog = "git-cliff"
append-changelog = "git-cliff --unreleased --prepend CHANGELOG.md"  # prepend new entries to CHANGELOG.md without footer part



#[tool.pdm.scripts.check-commits]
#shell = "gitlint --commits $(git describe --tags --abbrev=0)..HEAD lint"


[tool.pdm.dev-dependencies]
build = [
    "setuptools>=39.2",  # MHogan: Pycharm complains oddly without this on Windows platform
    "spyder-kernels",    # Mhogan: If you want to use Spyder
    "git-cliff>=2.6.1",
    "pdm-bump>=0.9.8",
]
# semantic_release.commit-messages git-cliff
# chore: Changes to the build process or auxiliary tools and libraries such as documentation generation
# docs: Documentation only changes
# feat: A new feature
# fix: A bug fix
# perf: A code change that improves performance
# refactor: A code change that neither fixes a bug nor adds a feature
# style: Changes that do not affect the meaning of the code (white-space, formatting, missing semi-colons, etc)
# test: Adding missing or correcting existing tests

test = [
    "nox",
    "pytest",
    "pytest-cov",
    "pytest-pep8",
    "hypothesis",
    "matplotlib>=3.8.0",
    "Cartopy>=0.22.0",
    "pytest-ruff>=0.4.1",
    "ruff>=0.0.47",
    # "gitlint>=0.19",
    "pytest-mypy>=0.10.3",
    "mypy>=1.11.2",
]
sphinx = [
    "sphinx>=1.3.1",
    "sphinx_rtd_theme>=0.1.7",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-bibtex",
    "myst_parser",
]
all = ["nvector[build,plot,test,sphinx]"]

[tool.mypy]
strict = true
explicit_package_bases = false
no_namespace_packages = true
warn_return_any = false
disable_error_code = "import-untyped"
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "nvector.__init__",
    "nvector.tests.test_plot",
    "nvector.tests.test_geodesic",
    "nvector.tests.test_nvector",
    "nvector.tests.test_nvector_with_vectors",
    "nvector.tests.test_objects",
    "nvector.tests.test_rotation",
    "nvector.tests.test_util",
    "nvector.plot",
]
ignore_errors = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["B",  # flake8-bugbear
          "C4", # flake8-comprehensions
          "E4", # pycodestyle import checks
          "E7", # pycodestyle statement checks
          "E9", # pycodestyle runtime checks
          "E501", # pycodestyle linelength checks
          "F",  # PyFlakes
          "I",  # isort
          "Q",
          # "UP", # pyupgrade
          ]

# On top of the numpy convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
#docstring-code-format = true
docstring-code-line-length = 100

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL",  "ELLIPSIS"]
addopts = "-rsxXf --doctest-modules --cov=nvector --cov-report=xml --ruff --ruff-format "  # --mypy
testpaths = [
    "src"
]
