[metadata]
name = nvector
summary = Solves all kinds of geographical position calculations.
author = pbrod
author_email = per.andreas.brodtkorb@gmail.com
license = Simplified BSD
home-page = https://github.com/pbrod/nvector/
description-file = README.rst
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier = Development Status :: 4 - Beta
             Programming Language :: Python
             Programming Language :: Python :: 2.7
             Programming Language :: Python :: 3
             Programming Language :: Python :: 3.4
             Programming Language :: Python :: 3.5
             Programming Language :: Python :: 3.6
             Environment :: Console
             Intended Audience :: Education
             Intended Audience :: Science/Research
             License :: OSI Approved :: BSD License
             Operating System :: OS Independent
             Operating System :: POSIX :: Linux
             Operating System :: Unix
             Operating System :: MacOS
             Operating System :: Microsoft :: Windows
             Topic :: Scientific/Engineering :: Mathematics
             Topic :: Scientific/Engineering :: GIS

[options]
zip_safe = False


# Add here dependencies of your project (semicolon-separated), e.g.
install_requires = numpy; scipy; geographiclib

# Add here test requirements (semicolon-separated)
tests_require = pytest; pytest-cov



[test]
# py.test options when running `python setup.py test`
addopts = src/nvector
          src/nvector/tests

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    -rsxXf
    --doctest-modules
    --codestyle

norecursedirs =
    .*
    _build
    docs
    tmp*


pep8ignore =
    tests/*.py ALL
    info.py ALL
    conftest.py ALL
    setup.py ALL

codestyle_max_line_length = 110
# codestyle_ignore = E302 E501
codestyle_ignore = E41 E121 E123 E126 E133 E226 E241 E242 E302 W503 W504 E704

[pycodestyle]
count = False
ignore = E41,
         E121, # continuation line under-indented for hanging indent
         E123, # closing bracket does not match indentation of opening bracket's line
         E126, # continuation line over-indented for hanging indent
         E133, # closing bracket is missing indentation
         E226, # missing whitespace around arithmetic operator
         E241, # multiple spaces after ','
         E242, # tab after ','
         E302, # expected 2 blank lines, found 1
         W503, # expect line breaks after binary operator
         W504, # expects line breaks before binary operators
         E704, # multiple statements on one line (def)
max-line-length = 110
statistics = True

[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build


[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
format =
    bdist_wheel
    sdist

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

#[pyscaffold]
## PyScaffold's parameters when the project was created.
## This will be used when updating. Do not change!
##version = 3.0
#version = 2.5.11
#package = nvector
#extensions =
#    no_skeleton
